QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

CVS HEAD

- A warning is now being issued, asking whether one wants to remove a
  corresponding Patchbay connection, when client/ports are being
  disconnected over the Connections window, thus avoiding automatic
  reconnection annoyance due to normal active Patchbay behavior.

- The infamous "Keep child windows always on top" global option is
  now supposed to behave a little better when disabled, layering
  child windows as naturally as far the window manager dictates.

- Input/Ouput Channel setting is now allowed to be greater than 32;
  the special default text is now displayed, also on Input/Output
  Latency and Priority settings spin-boxes. 

- Andreas Persson just sent a patch that makes it possible to compile
  and run qjackctl with Qt version 4.1. Applied whithout hesitation,
  thanks.


0.3.1a  2007-07-19  System-tray tooltip icon crash fix.

- An immediate showstopper crash upon client start was irradicated,
  which was affecting those with the system-tray icon disabled,
  as is the default (thanks to Ken Ellinwood for first reporting
  this sloppy one).


0.3.1   2007-07-18  Shallowed bug-fix release.

- The current DSP load percentage activity is now also displayed on
  the system-tray icon tooltip.

- An illusive but nasty Connections/Patchbay item tooltip crash bug
  has been hopefully fixed (Qt >= 4.3).

- Now using QSystemTrayIcon class facility if available (Qt4 >= 4.2)
  making the system-tray option available on most platforms, notably
  on Windows and Mac OS X (EXPERIMENTAL).

- Usage of QProcess class has been severely refactored, now using
  QProcess::start() instead of QProcess::startDetached(), giving
  much tighter control over the started jackd(mp) process. Downside
  is that QjackCtl lost its ability and option to leave the process
  detached upon quitting the application. Too bad.
