@@ -5,6 +5,14 @@ ChangeLog
 
 CVS HEAD
 
+- The xrun count stats can now be reset simply by middle clicking
+  on the systray icon or the main window's display area (thanks to
+  patch sent by Dominic Sacré).
+
+- An improved version of the "shiny" background image was issued.
+  The original somehow looked like two different images put together,
+  probably most apparent on a bright TFT screen (by Dominic Sacré).
+
 - A warning is now being issued, asking whether one wants to remove a
   corresponding Patchbay connection, when client/ports are being
   disconnected over the Connections window, thus avoiding automatic
